# pygmc

./: .bumpversion.cfg  .gitignore  .readthedocs.yaml  CHANGELOG.md  LICENSE  README.md  Usage_Examples.ipynb  dev_requirements.txt  examples.py  pygmc_structure.drawio  pyproject.toml  requirements_dev.txt  setup.py  tasks.py
.github/workflows/: main.yml  python-app.yml
docs/: cli.rst  conf.py  connection.rst  devices.rst  examples.rst  history.rst  index.rst  knownissues.rst  modules.rst  pygmc.connection.rst  pygmc.devices.rst  pygmc.rst  requirements.txt
pygmc/: __init__.py  cli.py  history.py
pygmc/connection/: __init__.py  connection.py  const.py  discovery.py  udev_rule_check.py  utils.py
pygmc/devices/: __init__.py  auto_get_device.py  device.py  device_500.py  device_rfc1201.py  device_rfc1801.py  device_spec404.py  gmc300.py  gmc320.py  gmc500.py  gmc600.py  gmc800.py  gmcse.py
pygmc/documentation/: GQ-RFC1201.txt  GQ-RFC1801.txt
tests/: requirements.txt  test_cli.py  test_connection_mock_serial.py  test_correct_pygmc.py  test_device_get_history.py  test_ethereum.py  test_gmc300s_device_rfc1201.py  test_gmc320_plus_device_rfc1201.py  test_gmc500_plus_device_rfc_1801.py  test_gmc800.py  test_history_parser.py  test_mock.py  test_pygmc_connect_device_kwargs.py  win-requirements.txt
tests/data/: data_gmc300s.py  data_gmc320.py  data_gmc500_plus.py  data_gmc800.py  data_gmcse.py  data_history_parser.py  non_happy_data.py
tests/mocks/: __init__.py  connection.py
tests/test_connection/: test_brltty_udev_check.py  test_connection_misc.py  test_discovery.py
tests/test_devices/: test_auto_get_device.py  test_gmc300.py  test_gmc320.py  test_gmc500.py  test_gmc800.py  test_gmcse.py  test_spec_rfc1201.py  test_spec_rfc1801.py  test_spec_rfc404.py
